--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: requirements/mariadb/.
     container_name: mariadb
     volumes:
-      - mariadb_data:/var/lib/mysql
+      - ./mariadb_data:/var/lib/mysql
     ports:
       - "3306:3306"
     restart: always
@@ -15,7 +15,7 @@ services:
     build: requirements/wordpress/.
     container_name: wordpress
     volumes:
-      - ./wordpress_data:/var/www/html/wordpress
+      - wordpress_data:/var/www/html/wordpress
     depends_on:
       - mariadb
     ports:
