--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,16 @@
-BD_NAME=wordpress
+DB_NAME=wordpress
 DB_USER_NAME=gothmane
 DB_USER_PASSWORD=gothmane
-DB_ROOT_PASSWORD=wordpress
+DB_ROOT_PASSWORD=root
+
+
+ADMIN_USER=root
+ADMIN_PASS=root
+ADMIN_EMAIL=root@root.com
+
+USER_NAME=gothmane
+USER_EMAIL=gothmane@gothmane.com
+USER_PASS=gothmane
+
+
+WEBSITE=10.11.249.15
