--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,21 +1,11 @@
 FROM debian:bookworm
 
-
 RUN apt update && apt install -y mariadb-server
 
 RUN mkdir -p /run/mysqld/ && chown -R mysql:mysql /run/mysqld/ && chmod 777 /run/mysqld/
 
-RUN mkdir -p /var/lib/mysql && chown -R mysql:mysql /var/lib/mysql && chmod 777 //var/lib/mysql 
+RUN mkdir -p /var/lib/mysql && chown -R mysql:mysql /var/lib/mysql && chmod 777 /var/lib/mysql 
 
-
-COPY script.sh /script.sh
-
-# Copy the 50-server.cnf file into the container
-
-EXPOSE 3306
-
+COPY /tools/script.sh /script.sh
 
 ENTRYPOINT [ "sh", "script.sh" ]
-
-# CMD [ "mariadbd" , "--user=mysql", "--bind-address=0.0.0.0" ]
-# mariadbd --user=mysql --bind-address=0.0.0.0
