--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -3,34 +3,37 @@ services:
   mariadb:
     build: requirements/mariadb/.
     container_name: mariadb
+    image: mariadb:1337
     volumes:
-      - ./mariadb_data:/var/lib/mysql
-    ports:
-      - "3306:3306"
+      - mariadb:/var/lib/mysql
     restart: always
     networks:
       - inception
+    env_file:
+      - .env
   
   wordpress:
     build: requirements/wordpress/.
     container_name: wordpress
+    image: wordpress:1337
     volumes:
-      - wordpress_data:/var/www/html/wordpress
+      - wordpress:/var/www/html/wordpress
     depends_on:
       - mariadb
-    ports:
-      - "9000:9000"
     networks:
       - inception
     restart: always
+    env_file:
+      - .env
   
   nginx:
     build: requirements/nginx/.
     container_name: nginx
+    image: nginx:1337
     ports:
       - "443:443"
     volumes:
-      - ./wordpress_data:/var/www/html/wordpress
+      - wordpress:/var/www/html/wordpress
     depends_on:
       - wordpress
     restart: always
@@ -43,14 +46,14 @@ networks:
     driver: bridge
 
 volumes:
-  mariadb_data:
+  mariadb:
     driver: local
     driver_opts:
       type: none
       o: bind  
-      device: /workspaces/inception/srcs/mariadb_data
-  wordpress_data:
+      device: /home/gothmane/data/mariadb/
+  wordpress:
     driver_opts:
       type: none
       o : bind
-      device : /workspaces/inception/srcs/wordpress_data
+      device : /home/gothmane/data/wordpress/
