--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,5 +1,6 @@
 server {
 	listen 443 ssl;
+    server_name gothmane.42.fr;
 
 	ssl_certificate /etc/nginx/ssl/gothmame.crt;
 	ssl_certificate_key /etc/nginx/ssl/gothmame.key;
