--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -4,8 +4,6 @@ RUN apt update && apt install -y mariadb-server
 
 RUN mkdir -p /run/mysqld/ && chown -R mysql:mysql /run/mysqld/ && chmod 777 /run/mysqld/
 
-RUN mkdir -p /var/lib/mysql && chown -R mysql:mysql /var/lib/mysql && chmod 777 /var/lib/mysql 
-
 COPY /tools/script.sh /script.sh
 
-ENTRYPOINT [ "sh", "script.sh" ]
+CMD [ "sh", "script.sh" ]
