--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -2,8 +2,8 @@ server {
 	listen 443 ssl;
     server_name gothmane.42.fr;
 
-	ssl_certificate /etc/nginx/ssl/gothmame.crt;
-	ssl_certificate_key /etc/nginx/ssl/gothmame.key;
+	ssl_certificate /etc/nginx/ssl/gothmane.crt;
+	ssl_certificate_key /etc/nginx/ssl/gothmane.key;
 	ssl_protocols TLSv1.3 TLSV1.2;
 	
 	root /var/www/html/wordpress;
